# qiniu-video

./: Cargo.toml
src/: log4rs.yaml  main.rs
src/api/: service_trait.rs
src/biz/: mod.rs  user.rs
src/data/: data.rs  db.rs  mod.rs  rdb.rs  user.rs
src/data/entity/: users.rs
src/errors/: errors.rs
src/log/: logger.rs
src/server/: mod.rs  response.rs
src/service/: mod.rs  service.rs
