[package]
name = "qiniu_video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "24.0.0"
redis = "0.23.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
rocket = "0.5.0"
sea-orm = { version = "0.12.6", features = ["sqlx-mysql","runtime-tokio-native-tls","macros"] }
log = "0.4.8"
log4rs = "1.2.0"
regex = "1"
